--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Quafios by quafios</title>
+    <title>Quafios</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Quafios</h1>
+        <h1>quafios</h1>
         <h2>Quafios operating system website</h2>
 
         <section id="downloads">
-          <a href="https://github.com/quafios" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/quafios/quafios" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
